[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Block.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 260, 40, 0, 0, 0, 0, 660, 40, 0, 0, 0, 0, 660, 1000, 0, 0, 0, 0, 260, 1000, 0, 0, 0, 0, 260, 40 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 480 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 200, 13.5 )

[node name="Main" type="Node"]
script = ExtResource( 1 )
Block = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
anchor_bottom = 40.0
margin_left = 260.0
margin_top = 40.0
margin_right = 660.0
margin_bottom = -40600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S1" type="ColorRect" parent="."]
margin_left = 280.0
margin_top = 60.0
margin_right = 320.0
margin_bottom = 100.0
color = Color( 0.054902, 0.709804, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S2" type="ColorRect" parent="."]
margin_left = 320.0
margin_top = 100.0
margin_right = 360.0
margin_bottom = 140.0
color = Color( 0.054902, 0.709804, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S3" type="ColorRect" parent="."]
margin_left = 280.0
margin_top = 100.0
margin_right = 320.0
margin_bottom = 140.0
color = Color( 0.054902, 0.709804, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S4" type="ColorRect" parent="."]
margin_left = 320.0
margin_top = 60.0
margin_right = 360.0
margin_bottom = 100.0
color = Color( 0.054902, 0.709804, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 280.0
margin_top = 190.0
margin_right = 320.0
margin_bottom = 230.0
color = Color( 0.733333, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 320.0
margin_top = 230.0
margin_right = 360.0
margin_bottom = 270.0
color = Color( 0.733333, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 360.0
margin_top = 190.0
margin_right = 400.0
margin_bottom = 230.0
color = Color( 0.733333, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 320.0
margin_top = 190.0
margin_right = 360.0
margin_bottom = 230.0
color = Color( 0.733333, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockMoveTimer" type="Timer" parent="."]

[node name="BlockSpawn" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="BlockSpawnArea" type="PathFollow2D" parent="BlockSpawn"]
position = Vector2( 260, 40 )

[node name="SideCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideCollision"]
position = Vector2( 249, 520 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SideCollision"]
position = Vector2( 672, 520 )
shape = SubResource( 3 )

[node name="BottomCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomCollision"]
position = Vector2( 460, 1016.5 )
shape = SubResource( 4 )

[connection signal="timeout" from="BlockMoveTimer" to="." method="_on_BlockMoveTimer_timeout"]
